trying to add webinterface

--- a/src/profile.env.example
+++ b/src/profile.env.example
@@ -1,7 +1,17 @@
-THREADPINGS=0
+THREADPINGS=1
+THREADTCPINGS=1
 MASSCANRATE=1000
 DEBUG=1
-DISCORD_BOT_TOKEN=THAT IS MY TOKEN NOT URS
-MC_NAME=ur mc name
-MC_UUID=ur mc uuid
-MC_TOKEN=NO U WONT GET MINE
+LOG_LEVEL=5 # -1: NOTHING | 0: NORMAL | 1: Progress | 2: Errors | 3: Extra info | 4: DEBUG :skull:
+IGNORE_FAKE_SERVERS=1
+WHOIS_RATE_LIMIT_TIME=20
+
+# More or less secret info 
+
+MC_NAME=
+MC_UUID=
+MC_TOKEN=
+SHODAN_KEY=
+DISCORD_BOT_TOKEN=
+
+# SECRET DATA dont use my token ):
